Make lists on group admin > members screen have a consistent style. Props davidtcarson. Also add clearing to those lists to make spacing consistent. Fixes #4043
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5879 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -2295,7 +2295,9 @@ div.item-list-tabs ul li.feed a {
 	background: url( ../images/rss.png ) center left no-repeat;
 	padding-left: 20px;
 }
-#admins-list li {
+#admins-list li,
+#mods-list li,
+#members-list li {
 	overflow: auto;
 }
 
